components/management-landing-page/management-landing-page.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-landing-page
  namespace: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: management-landing-page
  template:
    metadata:
      labels:
        app: management-landing-page
    spec:
      containers:
        - name: management-landing-page
          image: ghcr.io/fiaisis/management-landing-page@sha256:f270ac843b1093d3f475261d956f264fd073600134c85375e0e1db7154c31240
          ports:
            - name: web-port
              protocol: TCP
              containerPort: 3000
