components/management-landing-page/management-landing-page-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: management-landing-page-service
  namespace: landing-page
spec:
  selector:
    app: management-landing-page
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
