components/management-landing-page/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: management-landing-page
  namespace: landing-page
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https-main
  hostnames:
  - "management.reduce.isis.cclrc.ac.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: management-landing-page-service
      port: 3000
